plang/testing/logs/false-incorrect/127/program127.p.p
ttdf (H) fiXS.


cx uD4 nZ4 H UDMyh.

cAg.


gJ7 :- (o uhc W (UZ5UI) D5xI; v46As o5E gWO, ((zBCu (UOhZ4) (zkZ S2 SQ) (fv G)))).


rm (WqCfw) (X) (nBb1 A).
e A v4l (G1yL) :- iHpAc Rs (IkCW) AQJ c.
aKl :- r (U7) o Xk96 zc, n Zx GUs (b3y), ((mjKK YLkG2 dp aU (wI (lcDk (ayv (V) Al)) HOt (RX959)))), ((v J (Ro) (PB0z) w0h; um FD4W gBF L); qFy (H61tX) (Gf) (z9g) (Prn2)).
vChgL (kL qZU5 (Y) Rg) (rkZto (VbMS) (U) bA) xN.
e2m.
bS YO (Vc2e) :- (((gMy npyNt (Gs) (t vq9 (QHS8h) (yZ) (K)), xqxHC (T7p) (sHeZF (PHi)) (C)))), m erUh IeTW; m (Miuzu) (v gBxj nqQb2 (Aovkj)) T dhaU, (((a (xYf HLd) (s (B) (Y92i) Le2) vi (yM9l (W7XI3))))).
f0j (bPrp1 (FQrEA) (SqlT) (xSe) (s (C6P46) (m Tkot (PI4) lvPIm LOuJD))) S7pQ.
hJnsu LcBg2 yg3J (vnU ej) :- hai (a (w i3oY (TBlE9) (TD5)) (Hr) (yCU (wH0e8 (g) (Q) I MxuM) fdB2 (DPP) uUh)), a (Wm071) (hSfCg pKH49 (eu) (DgLI)) vMl4 ooNG; ciPR (W) (L) W; xS5x, m b143c D3w (FP6T) (z CjR y Vj1zo), l Ehax E, o (ms8 kUz6S (zfcRG aS4C2 (oZI2 (x6TN5 a xr (txv E)) NMr (U) (SKb)) (fIXq (sR) hRD ySN hv) au1hR) OZ); tb xZzc UTC9 ig32t, jg, m4P (w hZ7C KA (wi lAuTC (ATiC))), eTJjO, (n4 Ig7, xDwO aUOIk (OD)); f, fHCIz; z l9wiR (D3W) Z4v, uBPk.


kbx ixN ymg7 :- iIs9 (wrhBM O wE) (LBeJF).


k2a l4.
z to9VO (VzCQr) :- rR zL ne (e5 (H) A2 Oa kfC).


rPO ss (G) (Gb).
kG (uQ Dy xvnQj) (qRCUQ) (fG ee1IZ e ZI) :- (cUT fmOAp).
? jhA.



